improve 19 november tengah malem

--- a/templates/register.html
+++ b/templates/register.html
@@ -56,7 +56,7 @@
             <button type="submit" class="btn-submit">Selanjutnya</button>
 
             <p class="login-link">
-                Sudah memiliki akun? <a href="{{ url_for('home') }}"><strong>Masuk</strong></a>
+                Sudah memiliki akun? <a href="{{ url_for('login_page') }}"><strong>Masuk</strong></a>
             </p>
         </form>
     </div>
